--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
     text-align: center;
     font-weight: 100;
 }
-
-.just-text {
-    border: 2px red;
+.just-text{
+    color: green;
+    padding: 100px;
+    text-align: center;
+    background-color: wheat;
+}
+.container{
+    border: 2px yellow solid;
 }
